--- a/Agent_Longchain/.gitignore
+++ b/Agent_Longchain/.gitignore
@@ -1,1 +1,11 @@
+# Ignorar arquivos de configuração local
+.env
+.env.*
 
+# Arquivos do Python
+__pycache__/
+*.pyc
+
+# Arquivos de sistema
+.DS_Store
+Thumbs.db
